--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "'tarea primera entrevista capitol'",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "test"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
